# MCPTTS

./: .gitignore  Launch_MCP_TTS.bat  Launch_MCP_TTS_CUDA.bat  README.md  Start_MCP_Server.bat  pyproject.toml  start_fish_speech_server.bat
.agent/skills/mcp-tts/: SKILL.md
scripts/: setup_piper_binary.py
src/mcp_tts/: __init__.py  main.py  server.py
src/mcp_tts/gui/: __init__.py  app.py  log_viewer.py  settings.py  widgets.py
src/mcp_tts/server/: __init__.py  context.py  lifecycle.py  resources.py  tools.py
src/mcp_tts/tts/: __init__.py  audio.py  edge.py  engine.py  fallback.py  manager.py  piper.py
src/mcp_tts/utils/: __init__.py  config.py  gpu.py  logging.py
tests/: check_espeakbridge.py  conftest.py  repro_piper.py  test_audio_effects.py  test_config.py  test_engines.py  test_import_warning.py  test_piper_direct.py  test_server_tools.py
tests/manual/: test_audio.py
tools/: download_models.py  install_piper.py  test_edge.py  test_piper_audio.py
