[project]
name = "mcp-tts"
version = "0.1.0"
description = "MCP Server for Text-to-Speech with GUI monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MCP TTS Developer" }
]
keywords = ["mcp", "tts", "text-to-speech", "speech-synthesis"]

dependencies = [
    "mcp>=1.0.0",
    "customtkinter>=5.2.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyttsx3>=2.90",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
piper = [
    "piper-tts>=1.2.0",
]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "onnxruntime-gpu>=1.16.0",
]
full = [
    "mcp-tts[piper,gpu]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-tts = "mcp_tts.main:main"
mcp-tts-server = "mcp_tts.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
